# appstore-ai

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING  Makefile  README.md  build-images.sh  clearml.conf.asc  docker-compose-kube.yaml  docker-compose.yaml  jaxnotes.md  launch_chart.sh  main.py  mongo-init.js  prototype.py  pyproject.toml  quick-deploy.sh  run.sh  skaffold.yaml  teardown_chart.sh  tmp.py  tmp.txt
.github/: ct.md  release.yml
ai-model/inference-engine/: Dockerfile  Makefile  README.md  README.rst  build.py  pyproject.toml  requirements.txt
ai-model/inference-engine/coverage/: cov.xml
ai-model/inference-engine/docs/source/: conf.py  index.rst
ai-model/inference-engine/docs/source/api/: inference_engine.__main__.rst  inference_engine.commands.new.rst  inference_engine.commands.rst  inference_engine.core.engine.rst  inference_engine.core.rst  inference_engine.main.rst  inference_engine.rst  inference_engine.schemas.io.GenericIO.rst  inference_engine.schemas.io.IOSchema.rst  inference_engine.schemas.io.JSONIO.rst  inference_engine.schemas.io.MediaFileIO.rst  inference_engine.schemas.io.MultipleMediaFileIO.rst  inference_engine.schemas.io.SingleMediaFileIO.rst  inference_engine.schemas.io.TextIO.rst  inference_engine.schemas.io.processors.rst  inference_engine.schemas.io.rst  inference_engine.schemas.media_types.rst  inference_engine.schemas.rst  inference_engine.utils.generate_engine.rst  inference_engine.utils.io.rst  inference_engine.utils.prompt.rst  inference_engine.utils.rst  inference_engine.utils.triton.health_check.rst  inference_engine.utils.triton.rst  modules.rst
ai-model/inference-engine/docs/source/user_guide/: ie_yaml_schema.rst  quickstart.md
ai-model/inference-engine/inference_engine/: __init__.py  __main__.py  main.py
ai-model/inference-engine/inference_engine/commands/: new.py
ai-model/inference-engine/inference_engine/core/: config.py  engine.py
ai-model/inference-engine/inference_engine/schemas/: media_types.py  metadata.json  metadata.py
ai-model/inference-engine/inference_engine/schemas/config/: v2.json
ai-model/inference-engine/inference_engine/schemas/io/: GenericIO.py  IOSchema.py  JSONIO.py  MediaFileIO.py  MultipleMediaFileIO.py  SingleMediaFileIO.py  TextIO.py  __init__.py  processors.py  validators.py
ai-model/inference-engine/inference_engine/utils/: generate_engine.py  io.py  prompt.py
ai-model/inference-engine/templates/gradio-app/: cookiecutter.json
ai-model/inference-engine/tests/data/: meta.yml
ai-model/inference-engine/tests/integration/: conftest.py  test_cli.py  test_health_check.py
ai-model/inference-engine/tests/schemas/: test_genericio.py  test_jsonio.py  test_mediafileio.py  test_multiplemediafileio.py  test_singlemediafileio.py  test_textio.py
ai-model/inference-engine/tests/unit/: test_engine.py
back-end/: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml  tmp.py
back-end/internal/: file_validator.py
back-end/models/: experiment.py  iam.py
back-end/routers/: experiments.py
back-end/scripts/: decrypt-env.sh  generate-ci-env.py
back-end/src/: main.py
back-end/src/config/: .env.asc  .env.gpg  .env.public  config.py  decrypt-env.sh  encrypt-env.sh
back-end/src/internal/: auth.py  clearml_client.py  db.py  file_validator.py  inference.py  k8s_client.py  keycloak_auth.py  minio_client.py  preprocess_html.py  templates.py  utils.py
back-end/src/internal/data_connector/: __init__.py  clearml_dataset.py  connector.py  dataset.py
back-end/src/internal/dependencies/: minio_client.py  mongo_client.py
back-end/src/internal/experiment_connector/: __init__.py  clearml_exp.py  connector.py
back-end/src/internal/tasks/: __init__.py  clean_orphaned_media.py  clean_orphaned_services.py  init_db.py  model_exporter.py
back-end/src/models/: accesscontrol.py  auth.py  buckets.py  common.py  dataset.py  engine.py  experiment.py  exports.py  iam.py  model.py
back-end/src/routers/: accesscontrol.py  auth.py  buckets.py  datasets.py  engines.py  experiments.py  exports.py  iam.py  models.py  uploader.py
back-end/src/templates/: inference-engine-service.yaml.j2  kn-inference-engine.yaml
back-end/src/templates/ambassador/: ambassador-mapping.yaml.j2  inference-engine-deployment.yaml.j2  inference-engine-service.yaml.j2
back-end/src/templates/knative/: inference-engine-knative-service.yaml.j2
back-end/tests/: docker-compose.yaml  test_clearml.conf  test_clearml.conf.asc
back-end/tests/api/: conftest.py  test_datasets.py  test_iam.py  test_models.py
back-end/tests/unit/: conftest.py  iam_test.py  test_datasets.py  test_iam.py  test_init.py  test_models.py  test_routing.py
back-end/tests/unit/apis/: test_buckets.py  test_datasets.py  test_engines.py  test_iam.py  test_models.py
back-end/tests/unit/utils/: __init__.py  fake_auth.py  fake_db.py
prototype/: prototype.py  pyproject.toml
(+433 files in other folders)
