[tool.poetry]
name = "appstore-ai"
version = "0.1.0"
description = ""
authors = ["Matthias and Tien Cheng"]
readme = "README.md"
packages = [{include = "appstore_ai"}]

[tool.poetry.dependencies]
python = "^3.9"
clearml = "^1.6.4"
clearml-agent = "^1.3.0"
fastapi = "^0.83.0"
uvicorn = "^0.18.3"
python-multipart = "^0.0.5"
pymongo = "^4.2.0"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
mtools = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
