[tool.poetry]
name = "appstore-ai"
version = "0.1.0"
description = ""
authors = ["Mathias and Tien Cheng"]
readme = "README.md"
packages = [{include = "appstore_ai"}]

[tool.poetry.dependencies]
python = "^3.9"
clearml = "^1.6.4"
clearml-agent = "^1.3.0"
fastapi = "^0.83.0"
uvicorn = "^0.18.3"
python-multipart = "^0.0.5"
motor = "^3.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
click = "^8.1.3"
streaming-form-data = "^1.10.2"
python-dotenv = "^0.21.0"
filetype = "^1.1.0"

[tool.poetry.scripts]
boot = "main:start"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
mtools = "^1.7.0"
poethepoet = "^0.16.2"

[tool.poe.tasks.boot]
  help = "Boot applciation"
  cmd  = "uvicorn main:app --reload --host 0.0.0.0 --port 7070"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"