[tool.poetry]
name = "prototype"
version = "0.1.0"
description = ""
authors = ["Tien-Cheng <tiencheng@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
python-multipart = "^0.0.5"
uvicorn = "^0.18.3"
requests = "^2.28.1"
httpx = "^0.23.0"
aiohttp = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
