[tool.poetry]
name = "inference-engine"
version = "0.1.0"
description = ""
authors = ["Tien-Cheng <tiencheng@protonmail.com>"]
readme = "README.md"
packages = [{include = "inference_engine"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.0"
python-multipart = "^0.0.5"
uvicorn = "^0.18.3"
PyYAML = "^6.0"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
bandit = "^1.7.4"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
